src/objects/Promotion__c.object
<CustomObject>
    <description>For ID Card promotions</description>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <description>Promotion Code used for ID Card</description>
        <label>Promotion Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Promotion_Duration_Valid_From__c</fullName>
        <description>First date of validity period</description>
        <label>Promotion Duration - Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Duration_Valid_Up_to__c</fullName>
        <description>Last date of validity period</description>
        <label>Promotion Duration - Valid Up to</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Value__c</fullName>
        <description>Percentage of promotion</description>
        <label>Promotion Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type_of_Application__c</fullName>
        <description>Represents 4 types of promotion applications: &quot;New&quot; promotions, promotions for &quot;renewal&quot;, promotions for &quot;reissue&quot;, promotions for &quot;replacement&quot;</description>
        <label>Type of Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Reissue</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Promotion_Code__c</columns>
        <columns>Promotion_Value__c</columns>
        <columns>Type_of_Application__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Promotion_Duration_Valid_From__c</columns>
        <columns>Promotion_Duration_Valid_Up_to__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Promotion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>